# raytracer

./: CMakeLists.txt  Definitions.hpp  main.cpp  readme.md  run.sh
Scene/: CMakeLists.txt  Image.cpp  Image.hpp  Scene.cpp  Scene.hpp
Scene/Components/: CMakeLists.txt  Light.cpp  Light.hpp
Scene/Components/Objects/: CMakeLists.txt  Circle.cpp  Circle.hpp  Cone.cpp  Cone.hpp  Cylinder.cpp  Cylinder.hpp  Material.cpp  Material.hpp  Object.cpp  Object.hpp  Plane.cpp  Plane.hpp  Sphere.cpp  Sphere.hpp  Square.cpp  Square.hpp  Triangle.cpp  Triangle.hpp
Shapes/: CMakeLists.txt  Color.hpp  Shape.cpp  Shape.hpp  Sphere.cpp  Sphere.hpp
glm/: common.hpp
